# algorithms_part1-05-brokendna-stud-

./: CMakeLists.txt  readme.md
src/: dna_element.cpp  dna_element.h  dna_repairer.cpp  dna_repairer.h  linked_list.h  linked_list.hpp  main.cpp
tests/: CMakeLists.txt  dna_element_tests.cpp  dna_repairer_tests.cpp  linked_list_tests.cpp
